@@ -31,61 +31,48 @@
 #ifndef __GEDIT_DEBUG_H__
 #define __GEDIT_DEBUG_H__
 
+/*
+ * Set an environmental var of the same name to turn on
+ * debugging output. Setting GEDIT_DEBUG will turn on all
+ * sections.
+ */
 typedef enum {
-	GEDIT_DEBUG_VIEW,
-	GEDIT_DEBUG_UNDO,
-	GEDIT_DEBUG_SEARCH,
-	GEDIT_DEBUG_PRINT,
-	GEDIT_DEBUG_PREFS,
-	GEDIT_DEBUG_PLUGINS,
-	GEDIT_DEBUG_FILE,
-	GEDIT_DEBUG_DOCUMENT,
-	GEDIT_DEBUG_RECENT,
-	GEDIT_DEBUG_COMMANDS,
-	GEDIT_DEBUG_MDI,
-	GEDIT_DEBUG_SESSION,
-	GEDIT_DEBUG_UTILS,
-	GEDIT_DEBUG_METADATA
+	GEDIT_NO_DEBUG       = 0,
+	GEDIT_DEBUG_VIEW     = 1 << 0,
+	GEDIT_DEBUG_UNDO     = 1 << 1,
+	GEDIT_DEBUG_SEARCH   = 1 << 2,
+	GEDIT_DEBUG_PRINT    = 1 << 3,
+	GEDIT_DEBUG_PREFS    = 1 << 4,
+	GEDIT_DEBUG_PLUGINS  = 1 << 5,
+	GEDIT_DEBUG_FILE     = 1 << 6,
+	GEDIT_DEBUG_DOCUMENT = 1 << 7,
+	GEDIT_DEBUG_RECENT   = 1 << 8,
+	GEDIT_DEBUG_COMMANDS = 1 << 9,
+	GEDIT_DEBUG_MDI      = 1 << 10,
+	GEDIT_DEBUG_SESSION  = 1 << 11,
+	GEDIT_DEBUG_UTILS    = 1 << 12,
+	GEDIT_DEBUG_METADATA = 1 << 13
 } GeditDebugSection;
 
-extern gint debug;
-extern gint debug_view;
-extern gint debug_undo;
-extern gint debug_search;
-extern gint debug_print;
-extern gint debug_prefs;
-extern gint debug_plugins;
-extern gint debug_file;
-extern gint debug_document;
-extern gint debug_commands;
-extern gint debug_recent;
-extern gint debug_mdi;
-extern gint debug_session;
-extern gint debug_utils;
-extern gint debug_metadata;
 
-/* __FUNCTION_ is not defined in Irix according to David Kaelbling <drk@sgi.com>*/
-#if !defined(__GNUC__) && !defined(__FUNCTION__)
-#define __FUNCTION__   ""
-#endif
+#define	DEBUG_VIEW	GEDIT_DEBUG_VIEW,    __FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_UNDO	GEDIT_DEBUG_UNDO,    __FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_SEARCH	GEDIT_DEBUG_SEARCH,  __FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_PRINT	GEDIT_DEBUG_PRINT,   __FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_PREFS	GEDIT_DEBUG_PREFS,   __FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_PLUGINS	GEDIT_DEBUG_PLUGINS, __FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_FILE	GEDIT_DEBUG_FILE,    __FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_DOCUMENT	GEDIT_DEBUG_DOCUMENT,__FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_RECENT	GEDIT_DEBUG_RECENT,  __FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_COMMANDS	GEDIT_DEBUG_COMMANDS,__FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_MDI	GEDIT_DEBUG_MDI,     __FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_SESSION	GEDIT_DEBUG_SESSION, __FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_UTILS	GEDIT_DEBUG_UTILS,   __FILE__, __LINE__, G_GNUC_FUNCTION
+#define	DEBUG_METADATA	GEDIT_DEBUG_METADATA,__FILE__, __LINE__, G_GNUC_FUNCTION
 
-#define	DEBUG_VIEW	GEDIT_DEBUG_VIEW,    __FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_UNDO	GEDIT_DEBUG_UNDO,    __FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_SEARCH	GEDIT_DEBUG_SEARCH,  __FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_PRINT	GEDIT_DEBUG_PRINT,   __FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_PREFS	GEDIT_DEBUG_PREFS,   __FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_PLUGINS	GEDIT_DEBUG_PLUGINS, __FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_FILE	GEDIT_DEBUG_FILE,    __FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_DOCUMENT	GEDIT_DEBUG_DOCUMENT,__FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_RECENT	GEDIT_DEBUG_RECENT,  __FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_COMMANDS	GEDIT_DEBUG_COMMANDS,__FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_MDI	GEDIT_DEBUG_MDI,     __FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_SESSION	GEDIT_DEBUG_SESSION, __FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_UTILS	GEDIT_DEBUG_UTILS,   __FILE__, __LINE__, __FUNCTION__
-#define	DEBUG_METADATA	GEDIT_DEBUG_METADATA,__FILE__, __LINE__, __FUNCTION__
+void gedit_debug_init (void);
 
-
-void gedit_debug (gint section, gchar *file,
+void gedit_debug (GeditDebugSection section, gchar *file,
 		  gint line, gchar* function, gchar* format, ...);
 
 #endif /* __GEDIT_DEBUG_H__ */
