@@ -1,3 +1,8 @@
+2004-04-04  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-debug.[ch]
+	* gedit2.c: debugging output is now enabled by setting env vars.
+
 2004-03-27  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit-document.c (gedit_document_replace_selected_text): fix leak
